<resources>
    <string name="app_name">GithubUser</string>
    <string name="home">Home</string>
    <string name="user_list">User List</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="repository">Repository</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
</resources>
