<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    
    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:scaleType="fitXY"
        android:layout_margin="16dp"/>
    
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_toEndOf="@id/iv_avatar"
        android:layout_marginStart="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_below="@id/tv_name"
        android:layout_toEndOf="@id/iv_avatar"
        android:layout_marginStart="10dp"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:layout_below="@id/tv_username"
        android:layout_toEndOf="@id/iv_avatar"
        android:layout_marginStart="10dp"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:maxLines="2"/>

</RelativeLayout>